{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 145,
  "lineage": "2b1cb7ba-dec8-4fa6-573d-81903c8f6e55",
  "resources": [
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:security-group/sg-07a3b74b84e91fb92",
            "description": "Controls who can talk to the EKS Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a3b74b84e91fb92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with cluster",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf4f00a01b9b4a89"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cluster-sg",
            "name_prefix": "",
            "owner_id": "038774803581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:security-group/sg-0bf4f00a01b9b4a89",
            "description": "Allow nodes to communicate with each other on all ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf4f00a01b9b4a89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allows node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "node-sg",
            "name_prefix": "",
            "owner_id": "038774803581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with cluster",
            "from_port": 443,
            "id": "sgrule-3391636722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07a3b74b84e91fb92",
            "security_group_rule_id": "sgr-06746a97eed228971",
            "self": false,
            "source_security_group_id": "sg-0bf4f00a01b9b4a89",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.security-group.aws_security_group.eks-cluster",
            "module.security-group.aws_security_group.nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster to communicate with nodes",
            "from_port": 1025,
            "id": "sgrule-3004892222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bf4f00a01b9b4a89",
            "security_group_rule_id": "sgr-0d535d6f4cca36905",
            "self": false,
            "source_security_group_id": "sg-07a3b74b84e91fb92",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.security-group.aws_security_group.eks-cluster",
            "module.security-group.aws_security_group.nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0d432ec6e631ca4",
            "arn": "arn:aws:ec2:eu-west-2:038774803581:elastic-ip/eipalloc-0f0d432ec6e631ca4",
            "association_id": "eipassoc-0b9f1f6ff8c14461a",
            "domain": "vpc",
            "id": "eipalloc-0f0d432ec6e631ca4",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0048c472a9c3728c2",
            "private_dns": "ip-10-0-2-252.eu-west-2.compute.internal",
            "private_ip": "10.0.2.252",
            "public_dns": "ec2-13-135-140-231.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.135.140.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:internet-gateway/igw-05845321d1ca2508e",
            "id": "igw-05845321d1ca2508e",
            "owner_id": "038774803581",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0d432ec6e631ca4",
            "association_id": "eipassoc-0b9f1f6ff8c14461a",
            "connectivity_type": "public",
            "id": "nat-0b020dc4f467d85f5",
            "network_interface_id": "eni-0048c472a9c3728c2",
            "private_ip": "10.0.2.252",
            "public_ip": "13.135.140.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d716773165c39274",
            "tags": {
              "Name": "igw-nat"
            },
            "tags_all": {
              "Name": "igw-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:route-table/rtb-003ced48f914761c0",
            "id": "rtb-003ced48f914761c0",
            "owner_id": "038774803581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b020dc4f467d85f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:route-table/rtb-096d8fbf71786e411",
            "id": "rtb-096d8fbf71786e411",
            "owner_id": "038774803581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05845321d1ca2508e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e3230da6f4db2b8",
            "route_table_id": "rtb-003ced48f914761c0",
            "subnet_id": "subnet-05a9473ab5931d671"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-2a",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00119cba84f505862",
            "route_table_id": "rtb-003ced48f914761c0",
            "subnet_id": "subnet-0a5b34e400adbb373"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-2b",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-association-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c96195327464b46",
            "route_table_id": "rtb-096d8fbf71786e411",
            "subnet_id": "subnet-03b6976cf10ad6cd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-2a",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-association-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c38eb633ae92f93",
            "route_table_id": "rtb-096d8fbf71786e411",
            "subnet_id": "subnet-0d716773165c39274"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-05a9473ab5931d671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a9473ab5931d671",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-0a5b34e400adbb373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5b34e400adbb373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-03b6976cf10ad6cd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b6976cf10ad6cd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-0d716773165c39274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d716773165c39274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ed77d3ac0836ee4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:vpc/vpc-0ed77d3ac0836ee4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02744dc53b703bd85",
            "default_route_table_id": "rtb-0d06ecfa4fc8c8297",
            "default_security_group_id": "sg-04336b8af8fb05dda",
            "dhcp_options_id": "dopt-06da1b4ac7019d8bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed77d3ac0836ee4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d06ecfa4fc8c8297",
            "owner_id": "038774803581",
            "tags": {
              "Name": "Main-VPC"
            },
            "tags_all": {
              "Name": "Main-VPC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach"
          ]
        }
      ]
    }
  ]
}